Update Resource loading and build tools